# postWar

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  install_manifest.txt  postwar
_CPack_Packages/Linux/DEB/postwar-1.0.0-Linux/: control  md5sums
include/: draw.h  gamefeatures.h  loop.h  sound.h  video.h
source/: PostWar.cpp  main.cpp
source/GameFeatures/: blit_tela.cpp
source/GameFeatures/Creditos/: creditos.cpp
source/GameFeatures/Jogar/: coleta_recursos.cpp  jogar.cpp
source/GameFeatures/Jogar/Fase1/: carrega_unidades.cpp  carregar_fase1.cpp  evolucao.cpp  fase1.cpp  mover_unidade.cpp  verifica_hexagono.cpp
source/GameFeatures/Jogar/Fase2/: carrega_unidades2.cpp  carregar_fase2.cpp  fase2.cpp
source/GameFeatures/Jogar/Fase3/: carrega_unidades3.cpp  carregar_fase3.cpp  fase3.cpp
source/GameFeatures/Jogar/Fase4/: carrega_unidades4.cpp  carregar_fase4.cpp  fase4.cpp
source/GameFeatures/Jogar/Fase5/: carregar_fase5.cpp  fase5.cpp
source/features/MiscTasks/: audio.cpp  fontes.cpp
source/features/RenderWorld/: audio.cpp  draw.cpp  draw.h
source/features/UpdateObjects/: ataque_unidade.cpp  condicao_fim_do_jogo.cpp  dano_ataque.cpp  mover_unidade.cpp
